# text-to-sql-chatbot-with-rag

./: .env-example  README.md  api.py  ingest_pipeline.py  main.py  pyproject.toml  query_service.py  retriever.py  retriever_node.py  sql_executor.py  sql_node.py  sql_validator.py  ui.py
scripts/: create_xpto_db.py
