[project]
name = "text-to-sql-chatbot-with-rag"
version = "0.1.0"
description = "A Text-to-SQL Chatbot with RAG, LangChain, FastAPI And Streamlit"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.4",
    "fastapi>=0.121.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.0.1",
    "langchain-huggingface>=0.1.0",
    "nvidia-cuda-runtime-cu12>=12.8.90",
    "sentence-transformers>=5.1.2",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
]
